client/pages/product.module.css
/* Import Font - Montserrat */
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

.page {
  height: 69.9vh;
  background-image: url(../styles/blurry-gradient-haikei.svg);
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  background-origin: padding-box;
  background-clip: border-box;

  font-family: 'Nunito', sans-serif;
}

/* Main Page */
.titleimg {
  width: 360px;
}

.title {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  padding-left: 50px;
  z-index: 4;
}

.col {
  display: flex;
  flex-direction: column;
}

.xl {
  font-size: 50px;
  padding-top: 30px;
  margin: 0;
}

.l {
  color: var(--main-black);
  font-size: 40px;
  padding-top: 30px;
  margin: 0;
  border-bottom: 2px solid black;
  padding-bottom: 10px;
}

.m {
  margin-top: 30px;
  font-size: 20px;
}

.try {
  align-items: center;
  background-color: var(--main-purple);
  border-radius: 10px;
  color: var(--main-white);
  display: flex;
  justify-content: center;
  letter-spacing: 2px;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  min-width: 20rem;
  min-height: 4rem;
  width: 200px;
  z-index: 1;
}

.try:hover {
  background-color: var(--main-white);
  color: var(--main-black);
  transition: 0.4s;
}

.features {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-top: 30px;
  padding: 100px;
}

.feature {
  align-items: center;
  display: flex;
  justify-content: center;
  padding-left: 50px;
  padding-right: 50px;
  width: 830px;
}

.content {
  min-width: 50rem;
  padding-left: 50px;
  text-align: center;
}

.featureImg {
  margin-right: 50px;
  margin-top: 30px;
  width: 250px;
}

.featureTitle {
  font-size: 23px;
  font-weight: bold;
  letter-spacing: 1px;
}

.pText {
  letter-spacing: 1px;
  line-height: 30px;
}

.buttonOverlay {
  z-index: 3;
}


/* Background */

.wave {
  /* bottom */
  bottom: 30vh;
  left: 0;
  line-height: 0;
  overflow: hidden;
  position: absolute;
  transform: rotate(180deg);
  width: 100%;
  z-index:2;
}

.wave svg {
  display: block;
  height: 150px;
  margin-bottom: 0px;
  position: relative;
  width: calc(100% + 1.3px);
}

.goals {
  align-items: center;
  background-image: url(../styles/blurry-gradient-haikei.svg);
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 100px;
  margin: 0;
}

.goalContent {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 450px;
}

.bottom {
  align-items: center;
  display: flex;
  border-bottom: 4px solid black;
  background-color: rgb(250, 223, 250);
  flex-direction: column;
  height: 500px;
  justify-content: center;
  margin: 0;
}

.logo {
  padding: 30px;
  width: 200px;
}

.buymeacoffee {
  cursor: pointer;
  height: 200px;
  margin: 50px;
}

/** For tablet devices **/
@media (min-width: 768px) and (max-width: 1023px) {
  .wave svg {
    height: 110px;
    width: calc(100% + 1.3px);
  }
  .content {
    min-width: none;
  }
}

/** For mobile devices **/
@media (max-width: 767px) {
  .wave svg {
    height: 66px;
    width: calc(100% + 1.3px);
  }
}

